--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">nk
   <title>.</title>
 </head>
 <body>
@@ -41,6 +42,6 @@
     </section>
   </main>
 
-  <script type="module" src="src/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
