--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <a href="#" class="homepage__button">Play Quiz</a>
     </section>
   </main>
+  <div></div>
 
   <script type="module" src="src/main.js"></script>
 </body>
