--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       </ul>
     </nav>
 
-    <div class="nav__login">
-      <a href="#" class="btn__login">Login</a>
+    <div class="nav__register">
+      <a href="#" class="btn">Login</a>
+      <a href="#" class="btn">Sing In</a>
     </div>
   </header>
 
