--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="src/style.css">
-  <title>.</title>
+  <title>TriviaBoost</title>
 </head>
 <body>
   <header class="header">
@@ -30,8 +31,8 @@
     </nav>
 
     <div class="nav__register">
-      <a href="#" class="btn">Login</a>
-      <a href="#" class="btn">Sing In</a>
+      <a href="#" class="btn__1">Login</a>
+      <a href="#" class="btn__2">Sing In</a>
     </div>
   </header>
 
@@ -39,7 +40,7 @@
     <section class="homepage__hero">
       <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
       <p class="homepage__subtitle">Test your knowledge in math, science, history, programming and more!</p>
-      <a href="#" class="homepage__button">Play Quiz</a>
+      <a href="#" class="homepage__button"><i class="bi bi-play-fill"></i>Play Quiz</a>
     </section>
   </main>
   <div></div>
