--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="nav__register">
       <a href="#" class="btn__1">Login</a>
-      <a href="#" class="btn__2">Sing In</a>
+      <a href="#" class="btn__2">Sign In</a>
     </div>
   </header>
 
