--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="nav__links">
         <li><a href="#" id="nav__link">Home</a></li>
         <li class="nav__dropdown">
-          <a href="#" id="nav__link">Subjects</a>
+          <a href="#" id="nav__dropdown__link">Subjects</a>
           <ul class="nav__dropdown-menu">
             <li><a href="#">Math</a></li>
             <li><a href="#">Science</a></li>
