--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li class="nav__dropdown">
           <a href="#" id="nav__dropdown__link">Subjects</a>
           <ul class="nav__dropdown-menu">
-            <li><a href="#">Math</a></li>
-            <li><a href="#">Science</a></li>
-            <li><a href="#">Programming</a></li>
-            <li><a href="#">History</a></li>
+            <li><a href="#" class="dropdown__link">Math</a></li>
+            <li><a href="#" class="dropdown__link">Science</a></li>
+            <li><a href="#" class="dropdown__link">Programming</a></li>
+            <li><a href="#" class="dropdown__link">History</a></li>
           </ul>
         </li>
         <li><a href="#" id="nav__link">Leaderboard</a></li>
