--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li class="nav__dropdown">
           <a href="#" id="nav__dropdown__link">Subjects</a>
           <ul class="nav__dropdown-menu">
-            <li><a href="#" class="dropdown__link">Math</a></li>
-            <li><a href="#" class="dropdown__link">Science</a></li>
+            <li><a href="#" class="dropdown__link"><img src="public/img/cube.png" alt="">Math</a></li>
+            <li><a href="#" class="dropdown__link"><img src="public/img/science.png" alt="">Science</a></li>
             <li><a href="#" class="dropdown__link">Programming</a></li>
             <li><a href="#" class="dropdown__link">History</a></li>
           </ul>
