--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li class="nav__dropdown">
           <a href="#" id="nav__dropdown__link">Subjects</a>
           <ul class="nav__dropdown-menu">
-            <li><a href="#" class="dropdown__link"><img src="public/img/cube.png" alt="">Math</a></li>
-            <li><a href="#" class="dropdown__link"><img src="public/img/science.png" alt="">Science</a></li>
-            <li><a href="#" class="dropdown__link">Programming</a></li>
-            <li><a href="#" class="dropdown__link">History</a></li>
+            <li><img src="public/img/cube.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
+            <li><img src="public/img/science.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
+            <li><img id="programming__video__icon" src="public/img/programming-video-icon.gif"><a href="#" class="dropdown__link">Programming</a></li>
+            <li><img id="history__video__icon" src="public/img/history-video-icon.gif" alt=""><a href="#" class="dropdown__link">History</a>
           </ul>
         </li>
         <li><a href="#" id="nav__link">Leaderboard</a></li>
