--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <ul class="nav__dropdown-menu">
             <li><img src="public/img/cube.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
             <li><img src="public/img/science.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
-            <li><img id="programming__video__icon" src="public/img/programming-video-icon.gif"><a href="#" class="dropdown__link">Programming</a></li>
-            <li><img id="history__video__icon" src="public/img/history-video-icon.gif" alt=""><a href="#" class="dropdown__link">History</a>
+            <li class="programming"><img id="programming__video__icon" src="public/img/jKHUKMmGdt.gif"><a href="#" class="dropdown__link__programming">Programming</a></li>
+            <li class="history"><img id="history__video__icon" src="public/img/history-video-icon.gif" alt=""><a href="#" class="dropdown__link__history">History</a>
           </ul>
         </li>
         <li><a href="#" id="nav__link">Leaderboard</a></li>
