--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li class="nav__dropdown">
           <a href="#" id="nav__dropdown__link">Subjects</a>
           <ul class="nav__dropdown-menu">
-            <li><img src="public/img/cube.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
-            <li><img src="public/img/science.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
-            <li class="programming"><img id="programming__video__icon" src="public/img/jKHUKMmGdt.gif"><a href="#" class="dropdown__link__programming">Programming</a></li>
-            <li class="history"><img id="history__video__icon" src="public/img/history-video-icon.gif" alt=""><a href="#" class="dropdown__link__history">History</a>
+            <li><img id="math__icon" src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link__math">Math</a></li>
+            <li><img id="science__icon" src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link__science">Science</a></li>
+            <li><img id="programming__icon" src="public/img/programming-icon.png" alt=""><a href="#" class="dropdown__link__programming">Programming</a></li>
+            <li><img id="history__icon" src="public/img/history-icon.png" alt=""><a href="#" class="dropdown__link__history">History</a>
           </ul>
         </li>
         <li><a href="#" id="nav__link">Leaderboard</a></li>
