--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="nav__links">
         <li><a href="#" id="nav__link">Home</a></li>
         <li class="nav__dropdown">
-          <a href="#" id="nav__dropdown__link">Subjects</a>
+          <a href="#" id="nav__dropdown__link">Subjects<img src="public/img/arrow-dropdown.png" alt=""></a>
           <ul class="nav__dropdown-menu">
             <li><img id="math__icon" src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link__math">Math</a></li>
             <li><img id="science__icon" src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link__science">Science</a></li>
