--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="nav__dropdown">
           <a href="#" id="nav__dropdown__link">Subjects <img src="public/img/arrow.png" alt=""></a>
           <ul class="nav__dropdown-menu">
-            <li><a href="#" class="dropdown__link">Math</a></li>
+            <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
             <li><a href="#" class="dropdown__link">Science</a></li>
             <li><a href="#" class="dropdown__link">Programming</a></li>
             <li><a href="#" class="dropdown__link">History</a>
@@ -40,7 +40,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Test your knowledge in math, science, history, programming and more!</p>
-        <button class="homepage__button"><a href="#">Start practicing</a></button>
+        <button class="homepage__button"><a href="#">Play Quiz</a></button>
       </div>
     </section>
 
