--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#" id="nav__dropdown__link">Subjects <img src="public/img/arrow.png" alt=""></a>
           <ul class="nav__dropdown-menu">
             <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
-            <li><a href="#" class="dropdown__link">Science</a></li>
+            <li><img src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
             <li><a href="#" class="dropdown__link">Programming</a></li>
             <li><a href="#" class="dropdown__link">History</a>
           </ul>
