--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
       <ul class="nav__links">
         <li><a href="#" id="nav__link">Home</a></li>
         <li class="nav__dropdown">
-          <a href="#" id="nav__dropdown__link">Subjects <img src="public/img/arrow.png" alt=""></a>
+          <a href="#" id="nav__dropdown__link">Subjects <img id="arrow__img" src="public/img/arrow.png" alt=""></a>
           <ul class="nav__dropdown-menu">
             <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
             <li><img src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
-            <li><a href="#" class="dropdown__link">Programming</a></li>
-            <li><a href="#" class="dropdown__link">History</a>
+            <li><img src="public/img/programming-icon.png" alt=""><a href="#" class="dropdown__link">Programming</a></li>
+            <li><img src="public/img/history-icon.png" alt=""><a href="#" class="dropdown__link">History</a>
           </ul>
         </li>
         <li><a href="#" id="nav__link">Leaderboard</a></li>
-        <li><a href="#" id="nav__link">Achievements</a></li>
         <li><a href="#" id="nav__link">About</a></li>
       </ul>
     </nav>
 
     <div class="nav__register">
-      <a href="#" class="btn__1">Login</a>
+      <a href="#" class="btn__register__login">Login</a>
+      <a href="#" class="btn__register__signup">Sign Up</a>
     </div>
   </header>
 
@@ -39,13 +39,15 @@
     <section class="homepage__hero">
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
-        <p class="homepage__subtitle">Test your knowledge in math, science, history, programming and more!</p>
-        <button class="homepage__button"><a href="#">Play Quiz</a></button>
+        <p class="homepage__subtitle">Challenge your brain with fun quizzes across Math, Science, Programming, and History.</p>
+        <button class="homepage__button"><a href="#">Play Now</a></button>
       </div>
     </section>
 
-    <section class="about__hero">
-      <h1>about</h1>
+    <section class="featured__quizzes">
+      <div class="featured__quizzes__content">
+        <h1 class="featured__quizzes__header">Featured Quizzes</h1>
+      </div>
     </section>
   </main>
 
