--- a/index.html
+++ b/index.html
@@ -44,9 +44,45 @@
       </div>
     </section>
 
-    <section class="featured__quizzes">
-      <div class="featured__quizzes__content">
-        <h1 class="featured__quizzes__header">Featured Quizzes</h1>
+    <section class="quiz__spotlight">
+      <h1 class="quiz__spotlight__header">Featured Quizzes</h1>
+      <div class="quiz__spotlight__content">
+        <div class="quiz__box">
+          <div class="box__content">
+            <div class="info">
+              <h3 class= 'title'></h3>
+              <p class = 'questions__quantity'></p>
+              <p class= 'questions__difficulty'></p>
+            </div>
+            <div class="box__img">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+         <div class="quiz__box">
+          <div class="box__content">
+            <div class="info">
+              <h3 class= 'title'></h3>
+              <p class = 'questions__quantity'></p>
+              <p class= 'questions__difficulty'></p>
+            </div>
+            <div class="quiz__box">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+         <div class="quiz__box">
+          <div class="box__content">
+            <div class="info">
+              <h3 class= 'title'></h3>
+              <p class = 'questions__quantity'></p>
+              <p class= 'questions__difficulty'></p>
+            </div>
+            <div class="box__img">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
