--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
     </section>
 
     <section class="quiz__spotlight">
-      <h1 class="quiz__spotlight__header">Featured Quizzes</h1>
+      <h1 class="quiz__spotlight__header">Quiz Spotlight</h1>
       <div class="quiz__spotlight__content">
         <div class="quiz__box">
           <div class="box__content">
             <div class="info">
-              <h3 class= 'title'></h3>
-              <p class = 'questions__quantity'></p>
-              <p class= 'questions__difficulty'></p>
+              <h3 class= 'title'>Algebra Basics</h3>
+              <p class = 'questions__quantity'>Questions: 25</p>
+              <p>Difficulty: <span class="quiz__difficulty">Easy</span></p>
+              <button class="btn__quiz">Start Quiz</button>
             </div>
             <div class="box__img">
               <img src="" alt="">
@@ -62,21 +63,23 @@
          <div class="quiz__box">
           <div class="box__content">
             <div class="info">
-              <h3 class= 'title'></h3>
-              <p class = 'questions__quantity'></p>
-              <p class= 'questions__difficulty'></p>
+              <h3 class= 'title'>Science Facts</h3>
+              <p class = 'questions__quantity'>Questions: 10</p>
+              <p>Difficulty: <span class= 'quiz__difficulty'>Medium</span></p>
+              <button class="btn__quiz">Start Quiz</button>
             </div>
-            <div class="quiz__box">
+            <div class="box__img">
               <img src="" alt="">
             </div>
           </div>
         </div>
-         <div class="quiz__box">
+        <div class="quiz__box">
           <div class="box__content">
             <div class="info">
-              <h3 class= 'title'></h3>
-              <p class = 'questions__quantity'></p>
-              <p class= 'questions__difficulty'></p>
+              <h3 class= 'title'>Javascript Fudamentals</h3>
+              <p class = 'questions__quantity'>Questions: 10</p>
+              <p>Difficulty: <span class= 'quiz__difficulty'>Medium</span></p>
+              <button class="btn__quiz">Start Quiz</button>
             </div>
             <div class="box__img">
               <img src="" alt="">
