--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="box__content">
             <div class="info">
               <h3 class= 'title'>Algebra Basics</h3>
-              <p class = 'questions__quantity'>Questions: 25</p>
+              <p class = 'questions__quantity'>Questions: <span>25</span></p>
               <p>Difficulty: <span class="quiz__difficulty">Easy</span></p>
               <button class="btn__quiz">Start Quiz</button>
             </div>
@@ -64,7 +64,7 @@
           <div class="box__content">
             <div class="info">
               <h3 class= 'title'>Science Facts</h3>
-              <p class = 'questions__quantity'>Questions: 10</p>
+              <p class = 'questions__quantity'>Questions: <span>10</span></p>
               <p>Difficulty: <span class= 'quiz__difficulty'>Medium</span></p>
               <button class="btn__quiz">Start Quiz</button>
             </div>
@@ -77,7 +77,7 @@
           <div class="box__content">
             <div class="info">
               <h3 class= 'title'>Javascript Fudamentals</h3>
-              <p class = 'questions__quantity'>Questions: 10</p>
+              <p class = 'questions__quantity'>Questions: <span>10</span></p>
               <p>Difficulty: <span class= 'quiz__difficulty'>Medium</span></p>
               <button class="btn__quiz">Start Quiz</button>
             </div>
