--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     </div>
     <nav class="navbar">
       <ul class="nav__links">
-        <li><a href="#" id="nav__link">Home</a></li>
+        <li><a href="#" class= "home" id="nav__link"><img class="home__icon" src="public/img/home-icon.png" alt="">Home</a></li>
         <li class="nav__dropdown">
-          <a href="#sub" id="nav__dropdown__link">Subjects <img id="arrow__img" src="public/img/arrow.png" alt=""></a>
+          <a href="#sub" id="nav__dropdown__link">
+  Subjects <span class="arrow-wrapper"><img id="arrow__img" src="public/img/arrow.png" alt=""></span>
+</a>
           <ul class="nav__dropdown-menu">
             <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
             <li><img src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
