--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#" class= "home" id="nav__link"><img class="home__icon" src="public/img/home-icon.png" alt="">Home</a></li>
         <li class="nav__dropdown">
           <a href="#sub" id="nav__dropdown__link">
-  Subjects <span class="arrow-wrapper"><img id="arrow__img" src="public/img/arrow.png" alt=""></span>
+  Subjects <img id="arrow__img" src="public/img/arrow.png" alt="">
 </a>
           <ul class="nav__dropdown-menu">
             <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
@@ -42,7 +42,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Challenge your brain with fun quizzes across Math, Science, Programming, and History.</p>
-        <button class="homepage__button"><a href="#">Play Now</a></button>
+        <a class="homepage__button" href="#">Play Now</a></button>
       </div>
     </section>
 
