--- a/index.html
+++ b/index.html
@@ -13,28 +13,10 @@
       <h1 class="header__title">TriviaBoost</h1>
     </div>
     <nav class="navbar">
-      <ul class="nav__links">
-        <li><a href="#" class= "home" id="nav__link"><img class="home__icon" src="public/img/home-icon.png" alt="">Home</a></li>
-        <li class="nav__dropdown">
-          <a href="#sub" id="nav__dropdown__link">
-  Subjects <img id="arrow__img" src="public/img/arrow.png" alt="">
-</a>
-          <ul class="nav__dropdown-menu">
-            <li><img src="public/img/math-icon.png" alt=""><a href="#" class="dropdown__link">Math</a></li>
-            <li><img src="public/img/science-icon.png" alt=""><a href="#" class="dropdown__link">Science</a></li>
-            <li><img src="public/img/programming-icon.png" alt=""><a href="#" class="dropdown__link">Programming</a></li>
-            <li><img src="public/img/history-icon.png" alt=""><a href="#" class="dropdown__link">History</a>
-          </ul>
-        </li>
-        <li><a href="#" id="nav__link">Leaderboard</a></li>
-        <li><a href="#" id="nav__link">About</a></li>
-      </ul>
-    </nav>
-
-    <div class="nav__register">
+      <a href="#">How it Works?</a>
       <a href="#" class="btn__register__login">Login</a>
       <a href="#" class="btn__register__signup">Sign Up</a>
-    </div>
+    </nav>
   </header>
 
   <main class="homepage">
@@ -43,13 +25,6 @@
         <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Challenge your brain with fun quizzes across Math, Science, Programming, and History.</p>
         <a class="homepage__button" href="#">Play Now</a></button>
-      </div>
-    </section>
-
-    <section class="quiz__spotlight">
-      <h1 class="quiz__spotlight__header">Quiz Spotlight</h1>
-      <div class="quiz__spotlight__content">
-        
       </div>
     </section>
   </main>
