--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
       <h1 class="header__title">TriviaBoost</h1>
     </div>
     <nav class="navbar">
-      <a href="#">How it Works?</a>
-      <a href="#" class="btn__register__login">Login</a>
-      <a href="#" class="btn__register__signup">Sign Up</a>
+      <div class="info">
+        <a href="#">Explore Quizzes</a>
+        <a href="#">Guide</a>
+        <a href="#">Contact</a>
+      </div>
     </nav>
+    <div class="register__section">
+        <a href="#" class="btn__login">Login</a>
+        <a href="#" class="btn__signup">Sign Up</a>
+    </div>
   </header>
 
   <main class="homepage">
     <section class="homepage__hero">
       <div class="homepage__hero__content">
-        <h1 class="homepage__title">Welcome To <span>TriviaBoost</span></h1>
+        <h1 class="homepage__title">Welcome to <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Challenge your brain with fun quizzes across Math, Science, Programming, and History.</p>
-        <a class="homepage__button" href="#">Play Now</a></button>
+        <a class="homepage__button" href="#">Get Started</a></button>
       </div>
     </section>
   </main>
