--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     <nav class="navbar">
       <div class="info">
-        <a href="#">Explore Quizzes</a>
-        <a href="#">Guide</a>
-        <a href="#">Contact</a>
+        <a href="#"><div class="icon__wrapper"><img src="./public/img/application.png" alt=""></div>Explore</a>
+        <a href="#"><div class="icon__wrapper"><img src="./public/img/star.png" alt=""></div>Features</a>
+        <a href="#"><div class="icon__wrapper"><img src="./public/img/chat.png" alt=""></div>Contact</a>
       </div>
     </nav>
     <div class="register__section">
@@ -29,10 +29,24 @@
     <section class="homepage__hero">
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome to <span>TriviaBoost</span></h1>
-        <p class="homepage__subtitle">Challenge your brain with fun quizzes across Math, Science, Programming, and History.</p>
+        <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day.</p>
         <a class="homepage__button" href="#">Get Started</a></button>
       </div>
     </section>
+
+    <section class="features" id="features">
+      <header class="features__header">
+        <h2 class="features__label">Features</h2>
+        <h1 class="features__title">Boost Your Brain, Have Some Fun</h1>
+        <p class="features__subtitle">
+          From math to history, explore quizzes that keep your mind sharp.
+        </p>
+      </header>
+
+      <div class="features__grid">
+
+      </div>
+</section>
   </main>
 
   <script type="module" src="src/main.js"></script>
