--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <h1 class="header__title">TriviaBoost</h1>
+      <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
     </div>
     <nav class="navbar">
       <div class="info">
@@ -44,7 +44,12 @@
       </header>
 
       <div class="features__grid">
-
+        <div class="feature feature1"></div>
+        <div class="feature feature2"></div>
+        <div class="feature feature3"></div>
+        <div class="feature feature4"></div>
+        <div class="feature feature5"></div>
+        <div class="feature feature6"></div>
       </div>
 </section>
   </main>
