--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </div>
     <nav class="navbar">
       <div class="info">
-        <a href="#"><div class="icon__wrapper"><img src="./public/img/application.png" alt=""></div>Explore</a>
-        <a href="#"><div class="icon__wrapper"><img src="./public/img/star.png" alt=""></div>Features</a>
-        <a href="#"><div class="icon__wrapper"><img src="./public/img/chat.png" alt=""></div>Contact</a>
+        <a href="#">Features</a>
+        <a href="#">Explore</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </div>
     </nav>
     <div class="register__section">
