--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="navbar">
       <div class="info">
-        <a href="#">Features</a>
+        <a href="#features">Features</a>
         <a href="#">Explore</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
@@ -45,10 +45,30 @@
       </header>
 
       <div class="features__grid">
-        <div class="feature feature1"></div>
-        <div class="feature feature2"></div>
-        <div class="feature feature3"></div>
-        <div class="feature feature4"></div>
+        <div class="feature feature1">
+          <h3 class="feature__title">Math Mastery</h3>
+          <img src="/public/img/math__img.svg" alt="">
+          <p class="feature__description">Challenge your mind with tricky math puzzles and sharpen your problem-solving skills.</p>
+        </div>
+        <div class="feature feature2">
+          <div class="feature__info">
+            <h3 class="feature__title">History Buff</h3>
+            <p class="feature__description">Test your knowledge of world history, from ancient civilizations to modern events.</p>
+          </div>
+          <div class="feature__main__img">
+            <img src="/public/img/history__img.svg" alt="">
+          </div>
+        </div>
+        <div class="feature feature3">
+          <h3 class="feature__title">Science Explorer</h3>
+          <p class="feature__description">Explore fascinating science facts, experiments, and mind-bending discoveries.</p>
+          <img src="/public/img/science__img.svg" alt="">
+        </div>
+        <div class="feature feature4">
+          <h3 class="feature__title">Word Wizard</h3>
+          <p class="feature__description">Improve your vocabulary with fun word games and language challenges.</p>
+          <img src="/public/img/language__img.svg" alt="">
+        </div>
         <div class="feature feature5"></div>
         <div class="feature feature6"></div>
       </div>
