--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
           <p class="feature__description">Improve your vocabulary with fun word games and language challenges.</p>
           <img src="/public/img/language__img.svg" alt="">
         </div>
-        <div class="feature feature5"></div>
+        <div class="feature feature5">
+          <h3 class="feature__title">Geography Genius</h3>
+          <p class="feature__description">Learn about countries, capitals, landmarks, and world geography trivia.</p>
+          <img src="/public/img/geography__img.svg" alt="">
+        </div>
         <div class="feature feature6"></div>
       </div>
 </section>
