--- a/index.html
+++ b/index.html
@@ -70,11 +70,17 @@
           <img src="/public/img/language__img.svg" alt="">
         </div>
         <div class="feature feature5">
-          <h3 class="feature__title">Geography Genius</h3>
-          <p class="feature__description">Learn about countries, capitals, landmarks, and world geography trivia.</p>
+          <div class="feature__info">
+            <h3 class="feature__title">Geography Genius</h3>
+            <p class="feature__description">Learn about countries, capitals, landmarks, and world geography trivia.</p>
+          </div>
           <img src="/public/img/geography__img.svg" alt="">
         </div>
-        <div class="feature feature6"></div>
+        <div class="feature feature6">
+          <h3 class="feature__title">Logic Lab</h3>
+          <p class="feature__description">Solve puzzles and riddles that test your reasoning and critical thinking.</p>
+          <img src="/public/img/LogicLab__img.svg" alt="">
+        </div>
       </div>
 </section>
   </main>
