--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
           <img src="/public/img/LogicLab__img.svg" alt="">
         </div>
       </div>
-</section>
+      <div class="unlucked__features__dashboard">
+      </div>
+    </section>
+
+    <section class="contact" id="contact"> </section>
+
   </main>
 
   <script type="module" src="src/main.js"></script>
