--- a/index.html
+++ b/index.html
@@ -86,7 +86,27 @@
       </div>
     </section>
 
-    <section class="contact" id="contact"> </section>
+    <section class="contact" id="contact">
+      <div class="contact__header">
+        <p class="contact__label">Contact</p>
+        <h1 class="contact__title">We've love to hear from you!</h1>
+      </div>
+      <div class="contact__container">
+        <div class="main__contact__img">
+          <div class="contact__img__title">
+            <h1>Get in touch</h1>
+            <h1>With us!</h1>
+          </div>
+        </div>
+        <form class="contact__form">
+          <h2 class="contact__form__title">Send a message</h2>
+          <input type="text" placeholder="Your Name" class="contact__input" required>
+          <input type="email" placeholder="Your Email" class="contact__input" required>
+          <textarea placeholder="Your Message" class="contact__textarea" required></textarea>
+          <button type="submit" class="contact__button">Summit</button>
+        </form>
+      </div>
+    </section>
 
   </main>
 
