--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </div>
       <div class="contact__container">
         <div class="main__contact__img">
+          <img src="public/img/1343898.png" alt="">
           <div class="contact__img__title">
             <h1>Get in touch</h1>
             <h1>With us!</h1>
