--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="src/style.css">
+  <link rel="icon" href="public/img/trivia-boost-logo.svg" type="image/svg+xml">
   <title>TriviaBoost</title>
 </head>
 <body>
@@ -92,11 +93,9 @@
         <h1 class="contact__title">We've love to hear from you!</h1>
       </div>
       <div class="contact__container">
-        <div class="main__contact__img">
-          <img src="public/img/1343898.png" alt="">
-          <div class="contact__img__title">
-            <h1>Get in touch</h1>
-            <h1>With us!</h1>
+        <div class="contact__title">
+          <div class="title">
+            <img src="public/img/contact-font.svg" alt="">
           </div>
         </div>
         <form class="contact__form">
@@ -126,6 +125,7 @@
             <button type="submit" class="contact__btn">Summit</button>
           </div>
         </form>
+      </div>
       </div>
     </section>
 
