--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </nav>
     <div class="register__section">
-        <a href="#" class="btn__login">Login</a>
+        <a href="/src/pages/login-page/login.html" class="btn__login">Login</a>
         <a href="#" class="btn__signup">Sign Up</a>
     </div>
   </header>
@@ -95,7 +95,6 @@
       <div class="contact__container">
         <div class="contact__title">
           <div class="title">
-            <img src="public/img/contact-font.svg" alt="">
           </div>
         </div>
         <form class="contact__form">
