--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       </div>
       <div class="contact__container">
         <div class="contact__title">
-          <div class="title">
+         <div class="logo">
+          <img src="public/img/trivia-boost-logo.svg" alt="">
           </div>
         </div>
         <form class="contact__form">
