--- a/src/pages/login-page/login.html
+++ b/src/pages/login-page/login.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    
+    <div class="login__container">
+        <div class="logo">
+            <img src="/public/img/trivia-boost-logo.svg" alt="">
+            <h1>Sign in to TriviaBoost</h1>
+        </div>
+        <form class="inputs__container">
+            <div class="input1 input">
+                <div class="input__label">
+                    <label for="">Username or email adress</label>
+                </div>
+                <input type="text">
+            </div>
+            <div class="input2 input">
+                <div class="input__label">
+                    <label for="">Password</label>
+                    <a href="#">Forgot password?</a>
+                </div>
+                <input type="text">
+            </div>
+        </form>
+        <div class="btn__singin">
+            <button class="btn">Sign in</button>
+        </div>
+    </div>
 </body>
 </html>
