--- a/src/pages/login-page/login.html
+++ b/src/pages/login-page/login.html
@@ -27,7 +27,7 @@
                 <input type="text">
             </div>
         </form>
-        <div class="btn__singin">
+        <div class="btn__signin">
             <button class="btn">Sign in</button>
         </div>
     </div>
