--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome to <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day.</p>
-        <a class="homepage__button" href="#">Get Started</a></button>
+        <a class="homepage__button" href="#">Get Started</a>
       </div>
     </section>
 
@@ -45,46 +45,7 @@
         </p>
       </header>
 
-      <div class="features__grid">
-        <div class="feature feature1">
-          <h3 class="feature__title">Math Mastery</h3>
-          <img src="/public/img/math__img.svg" alt="">
-          <p class="feature__description">Challenge your mind with tricky math puzzles and sharpen your problem-solving skills.</p>
-        </div>
-        <div class="feature feature2">
-          <div class="feature__info">
-            <h3 class="feature__title">History Buff</h3>
-            <p class="feature__description">Test your knowledge of world history, from ancient civilizations to modern events.</p>
-          </div>
-          <div class="feature__main__img">
-            <img src="/public/img/history__img.svg" alt="">
-          </div>
-        </div>
-        <div class="feature feature3">
-          <h3 class="feature__title">Science Explorer</h3>
-          <p class="feature__description">Explore fascinating science facts, experiments, and mind-bending discoveries.</p>
-          <img src="/public/img/science__img.svg" alt="">
-        </div>
-        <div class="feature feature4">
-          <h3 class="feature__title">Word Wizard</h3>
-          <p class="feature__description">Improve your vocabulary with fun word games and language challenges.</p>
-          <img src="/public/img/language__img.svg" alt="">
-        </div>
-        <div class="feature feature5">
-          <div class="feature__info">
-            <h3 class="feature__title">Geography Genius</h3>
-            <p class="feature__description">Learn about countries, capitals, landmarks, and world geography trivia.</p>
-          </div>
-          <img src="/public/img/geography__img.svg" alt="">
-        </div>
-        <div class="feature feature6">
-          <h3 class="feature__title">Logic Lab</h3>
-          <p class="feature__description">Solve puzzles and riddles that test your reasoning and critical thinking.</p>
-          <img src="/public/img/LogicLab__img.svg" alt="">
-        </div>
-      </div>
-      <div class="unlucked__features__dashboard">
-      </div>
+      
     </section>
 
     <section class="contact" id="contact">
