--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
+      <img src="public/img/trivia-boost-logo.svg" alt="">
       <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
     </div>
     <nav class="navbar">
@@ -32,7 +33,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome to <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day.</p>
-        <a class="homepage__button" href="#">Get Started</a>
+        <a class="homepage__button" href="#"><img src="public/img/triviaBoost-logo-whiteversion.svg" alt="">Get Started</a>
       </div>
     </section>
 
@@ -44,6 +45,29 @@
           From math to history, explore quizzes that keep your mind sharp.
         </p>
       </header>
+
+      <div class="features__container">
+        <div class="box__container">
+          <div class="box box1">
+            <div class="box__content">
+              <h1 class="title">Your Learning Journey</h1>
+              <p class="subtitle">Track your performance with clear stats and discover your strengths and weaknesses.</p>
+            </div>
+            <img src="public/img/features-progress-img.svg" alt="">
+          </div>
+          <div class="box box2">
+
+          </div>
+        </div>
+        <div class="box__container">
+          <div class="box box3">
+
+          </div>
+          <div class="box box4">
+
+          </div>
+        </div>
+      </div>
 
       
     </section>
