--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <img src="public/img/trivia-boost-logo.svg" alt="">
+      <img src="public/img/trivia-boost-logo.svg" alt="img" width="32" height="32" loading="lazy">
       <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
     </div>
     <nav class="navbar">
@@ -33,7 +33,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Welcome to <span>TriviaBoost</span></h1>
         <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day.</p>
-        <a class="homepage__button" href="#"><img src="public/img/triviaBoost-logo-whiteversion.svg" alt="">Get Started</a>
+        <a class="homepage__button" href="#"><img src="public/img/triviaBoost-logo-whiteversion.svg" alt="img" width="22" height="22" loading="lazy">Get Started</a>
       </div>
     </section>
 
@@ -50,21 +50,33 @@
         <div class="box__container">
           <div class="box box1">
             <div class="box__content">
+              <h1 class="title">Fun & Challenging Quizzes</h1>
+              <p class="subtitle">Play quizzes across different subjects and challenge your knowledge every day.</p>
+            </div>
+            <img src="public/img/subject-icons.svg" width="300" height="300" alt="img" loading="lazy">
+          </div>
+          <div class="box box2">
+            <div class="box__content">
               <h1 class="title">Your Learning Journey</h1>
               <p class="subtitle">Track your performance with clear stats and discover your strengths and weaknesses.</p>
             </div>
-            <img src="public/img/features-progress-img.svg" alt="">
-          </div>
-          <div class="box box2">
-
+            <img src="public/img/features-progress-img.svg" width="300" height="300" alt="img" loading="lazy">
           </div>
         </div>
         <div class="box__container">
           <div class="box box3">
-
+            <div class="box__content">
+              <h1 class="title">Climb the Leaderboard</h1>
+              <p class="subtitle">Earn points with every quiz and compete to rise on the leaderboard.</p>
+            </div>
+            <img src="public/img/Points-icon.svg" width="300" height="300" alt="img" loading="lazy">
           </div>
           <div class="box box4">
-
+            <div class="box__content">
+              <h1 class="title">Tailored Quizzes Just for You</h1>
+              <p class="subtitle">Get personalized quizzes based on the questions you missed the most, so you improve exactly where you need to.</p>
+            </div>
+            <img src="public/img/features-practice-icon.svg" width="300" height="300" alt="img" loading="lazy">
           </div>
         </div>
       </div>
@@ -80,7 +92,7 @@
       <div class="contact__container">
         <div class="contact__title">
          <div class="logo">
-          <img src="public/img/trivia-boost-logo.svg" alt="">
+          <img src="public/img/trivia-boost-logo.svg" alt="img" width="450" height="450" loading="lazy">
           </div>
         </div>
         <form class="contact__form">
@@ -115,7 +127,6 @@
     </section>
 
   </main>
-
   <script type="module" src="src/main.js"></script>
 </body>
 </html>
