--- a/src/pages/dashboard-page/dashboard.html
+++ b/src/pages/dashboard-page/dashboard.html
@@ -7,40 +7,25 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <div class="dashboard__container">
-    <!-- 🔹 Sidebar -->
-        <aside class="sidebar__container">
-            <nav class="sidebar__menu">
-                <img src="/public/img/trivia-boost-logo.svg" alt="" class="sidebar__logo" width="40" height="40" loading="lazy">
-                <ul>
-                    <li><img src="/public/img/dashboard-icon.svg" alt="icon" width="30" height="30" loading="lazy"></li>
-                    <li><img src="/public/img/quizzes-icon.svg" alt="icon" width="30" height="30" loading="lazy"></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </nav>
-        </aside>
+   
 
-    <!-- 🔹 Contenido Principal -->
-        <main class="main__container">
-        <!-- Header superior del dashboard -->
-            <header class="main__header">
-                <h1>Dashboard</h1>
-                <div class="user__info">
-                    <img src="#" alt="User Avatar" class="user__avatar">
-                    <span class="username"></span>
-                </div>
-            </header>
-
-        <!-- 🔹 Secciones dinámicas -->
-            <div class="content__container">
-        
+    <section class="sidebar__container">
+        <aside class="sidebar">
+            <div class="logo__title">
+                <img src="/public/img/trivia-boost-logo.svg" alt="" width="32" height="32">
+                <h1>TriviaBoost</h1>
             </div>
-        </main>
-    </div>
-        
+            <ul>
+                <li><img src="/public/img/dashboard (1).png" alt="" width="24" height="24"><span>Dashboard</span></li>
+                <li><img src="/public/img/Untitled-1.svg" alt="" width="24" height="24"> <span>Quizzes</span></li>
+                <li><img src="/public/img/skill.png" alt="" width="24" height="24"><span>Logic Lab</span></li>
+                <li><img src="/public/img/target.png" alt="" width="24" height="24"><span>Practice</span></li>
+            </ul>
+            <ul class="setting">
+                <li><img src="/public/img/Untitled-2.svg" alt="" width="24" height="24"><span>Settings</span></li>
+            </ul>
+        </aside>
+    </section>
     <script type="module" src="script.js"></script>
 </body>
 </html>
