--- a/src/pages/dashboard-page/dashboard.html
+++ b/src/pages/dashboard-page/dashboard.html
@@ -8,23 +8,27 @@
 </head>
 <body>
    
+    
+    <aside class="sidebar">
+        <ul>
+            <li><img src="/public/img/dashboard (1).png" alt="" width="22" height="22"></li>
+            <li><img src="/public/img/Untitled-1.svg" alt="" width="22" height="22"></li>
+            <li><img src="/public/img/skill.png" alt="" width="22" height="22"></li>
+            <li><img src="/public/img/target.png" alt="" width="22" height="22"></li>
+        </ul>
+        <ul class="setting">
+            <li><img src="/public/img/Untitled-2.svg" alt="" width="22" height="22"></li>
+        </ul>
+    </aside>
+   
 
-    <section class="sidebar__container">
-        <aside class="sidebar">
-            <div class="logo__title">
-                <img src="/public/img/trivia-boost-logo.svg" alt="" width="32" height="32">
-                <h1>TriviaBoost</h1>
-            </div>
-            <ul>
-                <li><img src="/public/img/dashboard (1).png" alt="" width="22" height="22"><span>Dashboard</span></li>
-                <li><img src="/public/img/Untitled-1.svg" alt="" width="22" height="22"> <span>Quizzes</span></li>
-                <li><img src="/public/img/skill.png" alt="" width="22" height="22"><span>Logic Lab</span></li>
-                <li><img src="/public/img/target.png" alt="" width="22" height="22"><span>Practice</span></li>
-            </ul>
-            <ul class="setting">
-                <li><img src="/public/img/Untitled-2.svg" alt="" width="22" height="22"><span>Settings</span></li>
-            </ul>
-        </aside>
+    <section class="main__dashboard">
+        <div class="user__space">
+
+        </div>
+        <div class="dashboard__content">
+
+        </div>
     </section>
     <script type="module" src="script.js"></script>
 </body>
