--- a/src/pages/dashboard-page/dashboard.html
+++ b/src/pages/dashboard-page/dashboard.html
@@ -10,7 +10,10 @@
    
     
     <aside class="sidebar">
-        <ul>
+        <ul class="sidebar__buttons">
+            <div class="logo">
+                <img src="/public/img/trivia-boost-logo.svg" alt="" width="36" height="36" loading="lazy">
+            </div>
             <li><img src="/public/img/dashboard (1).png" alt="" width="22" height="22"></li>
             <li><img src="/public/img/Untitled-1.svg" alt="" width="22" height="22"></li>
             <li><img src="/public/img/skill.png" alt="" width="22" height="22"></li>
