--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -11,7 +11,7 @@
     <main>
         <aside class="sidebar__container">
             <div class="logo">
-                <img src="../assets/img/trivia-boost-logo.svg" width="40" height="40" alt="">
+                <img src="../assets/img/trivia-boost-logo.svg" width="48" height="48" alt="">
             </div>
             <nav class="sidebar__buttons">
                 <ul>
@@ -29,12 +29,18 @@
                     </li>
                 </ul>
             </nav>
+            <div class="settings">
+                <ul>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cog-icon lucide-cog"><path d="M11 10.27 7 3.34"/><path d="m11 13.73-4 6.93"/><path d="M12 22v-2"/><path d="M12 2v2"/><path d="M14 12h8"/><path d="m17 20.66-1-1.73"/><path d="m17 3.34-1 1.73"/><path d="M2 12h2"/><path d="m20.66 17-1.73-1"/><path d="m20.66 7-1.73 1"/><path d="m3.34 17 1.73-1"/><path d="m3.34 7 1.73 1"/><circle cx="12" cy="12" r="2"/><circle cx="12" cy="12" r="8"/></svg>
+                    </li>
+                </ul>
+            </div>
         </aside>
 
         <section class="user__space">
-            <header></header>
-            <div class="main__content">
-
+            <div class="profile__container">
+                <div class="profile"></div>
             </div>
         </section>
     </main>
