--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -40,7 +40,17 @@
 
         <section class="user__space">
             <div class="profile__container">
-                <div class="profile"></div>
+                <div class="profile">
+                    <div class="content_container">
+                        <div class="badges">
+
+                        </div>
+                        <div class="profile__img">
+                            <img class='profile__picture' src="../assets/img/default-profile-img.svg" width="50" height="50" alt="">
+                            <h2 class="username" id="username">carlosmiguel_1101</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
