--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -55,6 +55,6 @@
         </section>
     </main>
     
-    <script type="module" src="script.js"></script>
+    <script type="module" src="../js/dashboard.js"></script>
 </body>
 </html>
