--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -13,7 +13,7 @@
             <img src="../assets/img/trivia-boost-logo.svg" alt="">
             <h1>Sign in to TriviaBoost</h1>
         </div>
-        <form id='login_form' class="inputs__container">
+        <form id='signup_form' class="inputs__container">
             <div class="input1 input">
                 <div class="input__label">
                     <label for="">Username or email adress</label>
