--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -31,6 +31,9 @@
                 <button type='submit' class="btn">Sign in</button>
             </div>
         </form>
+        <div class="create__account">
+            <p>Don't have an account yet? <a href="./signup">Create an account</a></p>
+        </div>
     </div>
     <script src="../js/login.js"></script>
 </body>
