--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -8,30 +8,17 @@
 
 </head>
 <body>
-    <div class="login__container">
-        <div class="logo">
-            <img src="../assets/img/trivia-boost-logo.svg" alt="">
-            <h1>Sign in to TriviaBoost</h1>
+    <div class="container">
+        <div class="singup__poster">
+            <img src="" alt="">
         </div>
-        <form id='signup_form' class="inputs__container">
-            <div class="input1 input">
-                <div class="input__label">
-                    <label for="">Username or email adress</label>
-                </div>
-                <input type="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="input2 input">
-                <div class="input__label">
-                    <label for="">Password</label>
-                    <a href="#">Forgot password?</a>
-                </div>
-                <input type="password" name="password" placeholder="Password" required>
-            </div>
-            <div class="btn__signin">
-                <button type='submit' class="btn">Sign in</button>
-            </div>
-        </form>
+        <div class="signup__container">
+            <form id="signup__form" class="signup__form">
+                <h1>Create your account</h1>
+                
+            </form>
+        </div>
     </div>
-    <script src="../js/login.js"></script>
+    <script src="../js/signup.js"></script>
 </body>
 </html>
